# pydantic_settings_example

./: .gitignore  README.md  main.py  model.py  pyproject.toml  run_employee.sh  run_robot.sh  run_student.sh
